syntax = "proto3";

package patient;

service PatientService {
  rpc CreatePatient (CreatePatientReq) returns (PatientRes);
  rpc ListPatients (Empty) returns (PatientListRes);
  rpc GetPatient (IdRes) returns (PatientRes);
  rpc RemovePatient (IdRes) returns (RemoveRes);
}

message CreatePatientReq {
  string name = 1;
  string dob = 2;
}

message Patient {
  string id = 1;
  string name = 2;
  string dob = 3;
  string doctor_id = 4;
  string created_at = 5;
  string updated_at = 6;
}

message PatientList {
  repeated Patient patientes = 1;
}

message PatientRes {
  int32 status = 1;
  string message = 2;
  Patient data = 3;
}

message PatientListRes {
  int32 status = 1;
  string message = 2;
  PatientList data = 3;
}

message RemoveRes {
  int32 status = 1;
  string message = 2;
  boolean data = 3;
}

message IdRes {
  int32 id = 1;
}


message Empty {}